--- a/experience/index.html
+++ b/experience/index.html
@@ -139,7 +139,7 @@
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/deekshithbokka/"> Meesala Venkata Krishna Chaitanya</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/deekshithbokka/"> Deekshith Bokka</a></h1>
 
 </section>
 <!-- footer section ends -->
